<resources>
    <string name="app_name">BeonDriver App</string>

    <!-- IntroActivity -->
    <string name="login">登錄</string>
    <string name="signup">註冊</string>
    <string name="success">成功</string>
    <string name="failed">失敗</string>

    <!-- LoginActivity -->
    <string name="email">電子郵件</string>
    <string name="password">密碼</string>
    <string name="do_not_have_account">還沒有帳戶?</string>
    <string name="warning_input_email">請輸入電子郵件</string>
    <string name="warning_input_password">請輸入密碼</string>
    <string name="warning_first_name">請輸入名字</string>
    <string name="warning_last_name">請輸入姓氏</string>
    <string name="warning_date_of_birth">請輸入出生日期</string>
    <string name="warning_phone">請輸入電話號碼</string>
    <string name="network_error">網路錯誤</string>
    <string name="forgot_password">忘記密碼?</string>

    <!-- ForgotPasswordActivity -->
    <string name="send">發送</string>
    <string name="sent_email">Sent email</string>
    <string name="forgot_password_title">忘記密碼</string>

    <!-- ResetPasswordActivity -->
    <string name="reset_password">重置密碼</string>
    <string name="verify_code">验证代码</string>
    <string name="repreat_password">重複密碼</string>
    <string name="warning_code">請輸入驗證碼</string>
    <string name="warning_repeat_password">請輸入重複密碼</string>
    <string name="not_match_password">密碼不匹配</string>

    <!-- SignupActivity -->
    <string name="full_name">名字</string>
    <string name="first_name">名字</string>
    <string name="last_name">姓</string>
    <string name="hk_id">香港 ID</string>
    <string name="date_of_birth">出生日期</string>
    <string name="phone">電話號碼</string>
    <string name="agree_desc">通過點擊註冊, 您同意我們的</string>
    <string name="terms_desc">條款及條件</string>
    <string name="have_account">沒有帳戶已?</string>

    <!-- DriverLicenseActivity -->
    <string name="driver_license_number">駕照號碼</string>
    <string name="driver_expire_date">駕照到期日</string>
    <string name="driver_class">駕駛執照類</string>
    <string name="next">下一步</string>
    <string name="warning_license_number">請輸入駕照號碼</string>
    <string name="warning_expiry_date">請輸入駕照到期日</string>
    <string name="warning_license_class">請輸入駕駛執照類</string>

    <!-- VehicleActivity -->
    <string name="vehicle_type">車種</string>
    <string name="vehicle_number">車牌號</string>
    <string name="vehicle_expire_date">車牌號到期日</string>
    <string name="van">Van 仔</string>
    <string name="five_truck">5.5 噸密斗</string>
    <string name="nine_truck">9 噸密斗</string>
    <string name="tour_bus">旅遊巴</string>
    <string name="private_car">私家車</string>
    <string name="photo_vehicle">車輛的照片</string>
    <string name="photo_plate_number">車牌號碼照片</string>
    <string name="ad_area">廣告區域 (m X m)</string>
    <string name="warning_car_type">請選擇車種</string>
    <string name="warning_plate_number">請輸入車牌號</string>
    <string name="warning_plate_number_expiry_date">請輸入車牌號到期日</string>
    <string name="warning_ad_area">請輸入廣告區域</string>
    <string name="warning_vehicle_photo">請輸入車輛的照片</string>
    <string name="warning_plate_number_photo">請輸入車牌號碼照片</string>
    <string name="duplicated_user">重複的使用者</string>

    <!-- HomeActivity -->
    <!-- HomeView -->
    <string name="home">首頁</string>
    <string name="order">訂單</string>
    <string name="warning">警告</string>
    <string name="permission_denied">Permissions were denied. In order to allow permission, first you have to turn off screen overlay from Settings > Apps.</string>
    <string name="ok">確認</string>
    <string name="recording">記錄...</string>
    <string name="stopped">停止</string>
    <string name="campaign">廣告活動</string>
    <string name="start">開始</string>
    <string name="stop">停止</string>
    <string name="ad_here">廣告在此</string>

    <!-- OrderView -->
    <string name="orders">訂單</string>

    <!-- AccountView -->
    <string name="account">帳戶</string>
    <string name="personal_info">個人資訊</string>
    <string name="statistics">統計</string>
    <string name="full_name_comma">名字: </string>
    <string name="first_name_comma">名字: </string>
    <string name="last_name_comma">姓: </string>
    <string name="date_birth_comma">出生日期: </string>
    <string name="phone_number_comma">電話號碼: </string>
    <string name="save">保存</string>
    <string name="logout">登出</string>
    <string name="ad_completed_comma">Ad Completed: </string>
    <string name="total_amount_earned_comma">Total Amount Earned: </string>

    <!-- CurrentOrderDetailActivity -->
    <string name="cancelled">取消</string>
    <string name="ad_region_comma">Ad region: </string>
    <string name="sample_order_name">Tsim Sha Thai</string>
    <string name="ad_type">Ad Type: </string>
    <string name="ad_size">Ad Size: </string>
    <string name="ad_period">Ad Period: </string>
    <string name="amount">Amount: </string>
    <string name="cancel">取消</string>
    <string name="car_type">車種: </string>
    <string name="ad_theme">Ad Theme: </string>
    <string name="status">Status: </string>
    <string name="full_body">Full Body</string>
    <string name="twice_sided">2 Sided</string>
    <string name="back_door">Back Door</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="deleted">Deleted</string>
    <string name="complete">Complete</string>

    <!-- OrderDetailActivity -->
    <string name="accepted">接受</string>
    <string name="accept">接受</string>
</resources>
