<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.intro.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/ic_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_70sdp"/>

        <TextView
            android:id="@+id/appnameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/_15sdp"
            android:layout_below="@+id/iv"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_below="@id/appnameTV"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/input_background"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="@dimen/_15sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_below="@id/emailET"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/input_background"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="@dimen/_15sdp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/blue_btn_background"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_below="@id/passwordET"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/signupTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="#fff"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:clickable="true"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>